updated contact section

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,12 +6,13 @@
 
     <div class="contact-links">
 
+
     <a
-      id="profile-link"
       href="https://github.com/alexaveldanez"
       target="_blank"
       class="btn contact-details"
-      > GitHub</a
+      id="github"
+      ><i><img src="../../assets/images/GitHub-Mark-Light-32px.png"></i> GitHub</a
     >
 
     <a href="mailto:alexsaveldanez@gmail.com" class="btn contact-details"
@@ -23,4 +24,5 @@
     >
 
     </div>
+
   </section>
