--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,7 +5,7 @@
   <div class="projects-grid">
 
     <a
-    href=""
+    href="https://ng-todo-app-85e59.web.app/"
     target="_blank"
     class="project-tile"
   >
@@ -20,7 +20,22 @@
   </a>
 
   <a
-  href=""
+  href="https://wiki-search-f7201.web.app/"
+  target="_blank"
+  class="project-tile"
+  >
+    <img
+    class="project-image"
+    src="../../assets/images/WikiSearch.PNG"
+    alt="project"
+  />
+    <p class="project-title">
+    <span>Wiki Search</span>
+    </p>
+  </a>
+
+  <a
+  href="https://board-hub-c6adf.web.app/"
   target="_blank"
   class="project-tile"
   >
@@ -34,8 +49,25 @@
     </p>
   </a>
 
+
   <a
-  href=""
+  href="https://password-generator-6cd76.web.app/"
+  target="_blank"
+  class="project-tile"
+  >
+    <img
+    class="project-image"
+    src="../../assets/images/passwordGenerator.png"
+    alt="project"
+  />
+    <p class="project-title">
+    <span>Password Generator</span>
+    </p>
+  </a>
+
+
+  <a
+  href="https://github.com/alexaveldanez/ng-weather-news"
   target="_blank"
   class="project-tile"
   >
@@ -49,50 +81,6 @@
     </p>
   </a>
 
-  <a
-  href=""
-  target="_blank"
-  class="project-tile"
-  >
-    <img
-    class="project-image"
-    src="../../assets/images/ngWikiSearch.PNG"
-    alt="project"
-  />
-    <p class="project-title">
-    <span>NG Wiki Search</span>
-    </p>
-  </a>
-
-  <a
-  href=""
-  target="_blank"
-  class="project-tile"
-  >
-    <img
-    class="project-image"
-    src="../../assets/images/passwordGenerator.png"
-    alt="project"
-  />
-    <p class="project-title">
-    <span>Password Generator App</span>
-    </p>
-  </a>
-
-  <a
-  href=""
-  target="_blank"
-  class="project-tile"
-  >
-    <img
-    class="project-image"
-    src="../../assets/images/ngTicTacToe.PNG"
-    alt="project"
-  />
-    <p class="project-title">
-    <span>NG Tic Tac Toe</span>
-    </p>
-  </a>
 
   </div>
 
