--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,7 +7,6 @@
   text-align: center;
   width: 100%;
   height: 100%;
-  padding: 0 2rem;
   background-image:url("https://cdn.pixabay.com/photo/2016/11/23/15/23/cosmos-1853491_1280.jpg");
 }
 
@@ -49,4 +48,32 @@
 a {
   text-decoration: none;
   color: white;
+}
+
+#github {
+  padding-top: 8px;
+}
+
+@media (max-width: 500px) {
+  .contact-section-header > h2 {
+    font-size: 3rem;
+  }
+
+  .contact-section-header > h3 {
+    margin-top: 20px;
+    font-size: 1.5rem;
+  }
+
+  .contact-links {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 440px;
+    margin-top: 4rem;
+    flex-wrap: wrap;
+  }
+
+  .contact-details {
+    font-size: 1.5rem;
+  }
 }
