--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -25,7 +25,6 @@
 }
 
 .project-tile {
-  background: var(--main-gray);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   border-radius: 2px;
 }
@@ -49,4 +48,22 @@
 
 a {
   text-decoration: none;
+}
+
+@media (max-width: 500px) {
+
+.projects-section {
+  padding: 2rem;
+}
+
+.projects-header {
+  font-size: 2rem;
+  padding: 10px;
+}
+
+
+.projects-grid {
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
 }
